...

              const header = () => <TopHeader
                style={{ zIndex: 2000 }}
                actions={<View />}
                titleText={fileName + multiPageTitleAddition}
                nav={<View style={{ flex: 1, flexDirection: getRowDirection() }}>
                  <TouchableOpacity testID="header-home-button" onPress={() => {
                    props.route.params.goHome ? props.route.params.goHome() : {}
                  }}
                    activeOpacity={1}
                    style={{ flexDirection: 'row', alignItems: 'center' }}>
                    <SvgIcon name='home' color='white' size={30} />
                  </TouchableOpacity>
                  <Spacer />
                  <MoreButton
                    testID="editor-more-btn"
                    size={30} color={"white"}
                    onPress={() => {
                      props.route.params.onMoreMenu ? props.route.params.onMoreMenu() : {}
                    }} />
                </View>} />

...
