...
      });
    }
  };

  newPageButton = rtl => {
    return (
      <View key="6" testID="new-page-btn" ref={ref => this._newPageBtnRef = ref} collapsable={false}>
        {getSvgIconButton(
          () => this.openNewPageMenu(),
          semanticColors.addButton,
          'menu-new-empty-page',
          40,
        )}
...
